<?xml version="1.0"?>
<package>
  <name>opticar_msgs</name>
  <version>0.0.1</version>
  <description>The opticar_msgs package</description>

  <maintainer email="lukas.erlinghagen@kit.edu">Lukas Erlinghagen</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>


  <export>
  </export>
</package>
